--- a/styles/taima.css
+++ b/styles/taima.css
@@ -16,7 +16,7 @@ main{
   margin: 0 auto;
   width: 825px;
   height: 300px;
-  background-image: url('../images/taima.png');
+  background-image: url('../dist/taima.png');
   background-repeat: no-repeat;
   background-size: cover;
   text-align: center;
